--- a/app.json
+++ b/app.json
@@ -18,7 +18,15 @@
 			"bundleIdentifier": "com.clisamax.FormCam",
 			"runtimeVersion": "1.0.0",
 			"infoPlist": {
-				"NSCameraUsageDescription": "Este aplicativo precisa acessar a câmera para tirar fotos."
+				"NSCameraUsageDescription": "Este aplicativo precisa acessar a câmera para tirar fotos.",
+				"NSAppTransportSecurity": {
+					"NSAllowsArbitraryLoads": true,
+					"NSExceptionDomains": {
+						"localhost": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						}
+					}
+				}
 			}
 		},
 		"android": {
@@ -29,14 +37,27 @@
 			"edgeToEdgeEnabled": true,
 			"runtimeVersion": {
 				"policy": "appVersion"
-			}
+			},
+			"permissions": [
+				"android.permission.CAMERA",
+				"android.permission.INTERNET",
+				"android.permission.ACCESS_NETWORK_STATE"
+			]
 		},
 		"web": {
 			"bundler": "metro",
 			"output": "static",
 			"favicon": "./assets/images/favicon.png"
 		},
-		"plugins": ["expo-router"],
+		"plugins": [
+			"expo-router",
+			[
+				"expo-camera",
+				{
+					"cameraPermission": "Este aplicativo precisa acessar a câmera para tirar fotos."
+				}
+			]
+		],
 		"experiments": {
 			"typedRoutes": true
 		},
