--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
 		"@expo-google-fonts/roboto": "^0.2.3",
 		"@expo/vector-icons": "^14.1.0",
 		"@react-native-async-storage/async-storage": "2.1.2",
+		"@react-native-community/netinfo": "11.4.1",
 		"@react-navigation/native": "^7.0.14",
 		"axios": "^1.8.1",
 		"dotenv": "^16.5.0",
 		"expo": "^53.0.9",
-		"expo-camera": "~16.1.6",
+		"expo-camera": "~16.1.9",
 		"expo-dev-client": "~5.1.8",
 		"expo-file-system": "~18.1.10",
 		"expo-font": "~13.3.1",
