Adiciona exceções de segurança para novos IPs no app.json, refatora estilos e lógica de componentes, e melhora a importação da API em diversos arquivos. Inclui verificação de conectividade e descoberta de IPs locais.

--- a/app.json
+++ b/app.json
@@ -24,6 +24,27 @@
 					"NSExceptionDomains": {
 						"localhost": {
 							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.0.16": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.1.100": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.1.101": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.0.100": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.0.101": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"10.0.0.100": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"10.0.0.101": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
 						}
 					}
 				}
