--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.0.14",
+    "@types/react-native-datepicker": "^1.7.6",
     "axios": "^1.8.1",
     "dotenv": "^16.5.0",
     "expo": "^53.0.9",
@@ -43,7 +44,6 @@
     "react-hook-form": "^7.54.0",
     "react-native": "0.79.5",
     "react-native-date-picker": "^5.0.13",
-    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
