--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@biomejs/biome": "1.9.2",
+    "@react-native-community/cli": "^19.1.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
     "jest": "^29.2.1",
