--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@biomejs/biome": "1.9.2",
 		"@react-native-community/cli": "^19.1.0",
 		"@types/react-native": "^0.73.0",
+		"expo-module-scripts": "^4.1.10",
 		"jest": "^29.2.1",
 		"jest-expo": "~53.0.5",
 		"react-test-renderer": "18.2.0",
