--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"expo-file-system": "~18.1.10",
 		"expo-font": "~13.3.1",
 		"expo-linking": "~7.1.5",
+		"expo-media-library": "^18.2.0",
 		"expo-router": "~5.0.7",
 		"expo-splash-screen": "~0.30.8",
 		"expo-status-bar": "~2.2.3",
