--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,15 @@
 	"extends": "./node_modules/expo/tsconfig.base",
 	"compilerOptions": {
 		"strict": true,
+		"module": "esnext",
+		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"skipLibCheck": true,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"forceConsistentCasingInFileNames": true
 	},
 	"include": [
 		"**/*.ts",
@@ -12,5 +18,6 @@
 		".expo/types/**/*.ts",
 		"expo-env.d.ts",
 		"nativewind-env.d.ts"
-	]
+	],
+	"exclude": ["node_modules"]
 }
