chore: configurações dos emuladores e no occurrence.tsx TouchableWithoutFeedback

--- a/app.json
+++ b/app.json
@@ -79,7 +79,8 @@
         {
           "cameraPermission": "Este aplicativo precisa acessar a câmera para tirar fotos."
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
