chore: ajuste api.ts trocado http por https no link da api

--- a/app.json
+++ b/app.json
@@ -56,9 +56,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "runtimeVersion": {
-        "policy": "appVersion"
-      },
+      "runtimeVersion": "1.0.0",
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.INTERNET",
