--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,6 +47,13 @@ target 'FormCam' do
   )
 
   post_install do |installer|
+    # Fix glog automake issue with Xcode 26.x
+    glog_dir = File.join(installer.sandbox.pod_dir("glog"))
+    if File.exist?(glog_dir)
+      system("cd #{glog_dir} && curl -O https://git.savannah.gnu.org/gitweb/?p=automake.git;a=blob_plain;f=lib/missing;hb=HEAD")
+      system("cd #{glog_dir} && chmod +x missing")
+    end
+
     react_native_post_install(
       installer,
       config[:reactNativePath],
