feat: Add new global button component, implement keyboard dismissal on tap, and clean up iOS Podfile.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,16 +4,12 @@ require File.join(File.dirname(`node --print "require.resolve('react-native/pack
 require 'json'
 podfile_properties = JSON.parse(File.read(File.join(__dir__, 'Podfile.properties.json'))) rescue {}
 
-# Desativa nova arquitetura se configurado
 ENV['RCT_NEW_ARCH_ENABLED'] = '0' if podfile_properties['newArchEnabled'] == 'false'
 ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] = podfile_properties['EX_DEV_CLIENT_NETWORK_INSPECTOR']
 
 platform :ios, podfile_properties['ios.deploymentTarget'] || '15.1'
-
-# ⚡ OTIMIZAÇÃO 1 → Acelera Copy XCFrameworks e remove validação inútil
 install! 'cocoapods',
-  :deterministic_uuids => false,
-  :disable_input_output_paths => true
+  :deterministic_uuids => false
 
 prepare_react_native_project!
 
@@ -38,22 +34,15 @@ target 'FormCam' do
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
 
-  # Hermes + RN configs
   use_react_native!(
     :path => config[:reactNativePath],
     :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
+    # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
     :privacy_file_aggregation_enabled => podfile_properties['apple.privacyManifestAggregationEnabled'] != 'false',
   )
 
   post_install do |installer|
-    # Fix glog automake issue with Xcode 26.x
-    glog_dir = File.join(installer.sandbox.pod_dir("glog"))
-    if File.exist?(glog_dir)
-      system("cd #{glog_dir} && curl -O https://git.savannah.gnu.org/gitweb/?p=automake.git;a=blob_plain;f=lib/missing;hb=HEAD")
-      system("cd #{glog_dir} && chmod +x missing")
-    end
-
     react_native_post_install(
       installer,
       config[:reactNativePath],
@@ -61,44 +50,13 @@ target 'FormCam' do
       :ccache_enabled => podfile_properties['apple.ccacheEnabled'] == 'true',
     )
 
-    # Evita signing em bundles
-    installer.target_installation_results.pod_target_installation_results.each do |pod_name, target_installation_result|
+    # This is necessary for Xcode 14, because it signs resource bundles by default
+    # when building for devices.
+    installer.target_installation_results.pod_target_installation_results
+      .each do |pod_name, target_installation_result|
       target_installation_result.resource_bundle_targets.each do |resource_bundle_target|
         resource_bundle_target.build_configurations.each do |config|
           config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
-        end
-      end
-    end
-
-    # ⚡ OTIMIZAÇÃO 2 → Evitar rebuild de frameworks
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        config.build_settings['EXPANDED_CODE_SIGN_IDENTITY'] = ""
-        config.build_settings['CODE_SIGNING_REQUIRED'] = "NO"
-        config.build_settings['CODE_SIGNING_ALLOWED'] = "NO"
-      end
-    end
-
-    # ⚡ OTIMIZAÇÃO 3 → Faz o Copy XCFrameworks rodar apenas quando necessário
-    installer.aggregate_targets.each do |aggregate_target|
-      aggregate_target.user_project.native_targets.each do |native_target|
-        native_target.build_phases
-          .select { |phase| phase.respond_to?(:name) && phase.name == '[CP] Copy XCFrameworks' }
-          .each do |phase|
-            phase.run_only_for_deployment_postprocessing = 'YES'
-          end
-      end
-    end
-
-    # ⚡ OTIMIZAÇÃO 4 → Corrige warnings de scripts que rodam sempre
-    installer.aggregate_targets.each do |aggregate_target|
-      aggregate_target.user_project.native_targets.each do |native_target|
-        native_target.build_phases.each do |phase|
-          next unless phase.respond_to?(:name)
-
-          if phase.name.include?("[CP-User]")
-            phase.output_paths << "$(DERIVED_FILE_DIR)/#{phase.name.gsub(/[^a-zA-Z0-9]/, '_')}.txt"
-          end
         end
       end
     end
