feat: add product form with validation and submission handling
- Implemented a new product form component with fields for name, product, quantity, unit, and responsible person.
- Integrated form validation using react-hook-form with appropriate error messages.
- Added functionality to handle form submission, including API call to create a new product.
- Included error handling for API responses and user feedback via alerts.
- Utilized local search parameters to ensure the form is linked to a specific occurrence.
- Enhanced user experience with increment and decrement functionality for quantity input.

--- a/package.json
+++ b/package.json
@@ -93,6 +93,9 @@
 			"reactNativeDirectoryCheck": {
 				"exclude": ["metro", "metro-resolver", "metro-config"]
 			}
-		}
+		},
+		 "ios": {
+      "simulatorDevice": "iPhone 15"
+    }
 	}
 }
