--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
 		"ios": "expo run:ios",
 		"eas:build:ios": "eas build --profile development --platform ios",
 		"web": "expo start --web",
-		"test": "jest --watchAll", 
+		"test": "jest --watchAll",
 		"ios:build": "rm -rf ios/Pods ios/Podfile.lock && cd ios && pod install"
 	},
 	"jest": {
 		"preset": "jest-expo"
 	},
 	"dependencies": {
+		"@aws-amplify/auth": "^6.17.1",
+		"@aws-amplify/core": "^6.15.0",
+		"@aws-sdk/client-s3": "^3.966.0",
+		"@aws-sdk/lib-storage": "^3.966.0",
+		"@aws-sdk/util-create-request": "^3.966.0",
 		"@expo-google-fonts/fira-code": "^0.2.3",
 		"@expo-google-fonts/lato": "^0.2.3",
 		"@expo-google-fonts/montserrat": "^0.2.3",
@@ -35,15 +40,17 @@
 		"@react-navigation/native": "^7.0.14",
 		"@types/react-native-datepicker": "^1.7.6",
 		"@types/react-native-vector-icons": "^6.4.18",
-		"aws-sdk": "^2.1692.0",
+		"aws-sdk": "^2.1693.0",
 		"axios": "^1.8.1",
+		"buffer": "^6.0.3",
 		"dotenv": "^16.5.0",
 		"expo": "~53.0.24",
-		"expo-camera": "~16.1.9",
-		"expo-constants": "~17.1.7",
+		"expo-camera": "^17.0.10",
+		"expo-constants": "^18.0.13",
 		"expo-dev-client": "~5.2.4",
-		"expo-file-system": "~18.1.10",
+		"expo-file-system": "^19.0.21",
 		"expo-font": "~13.3.1",
+		"expo-image-manipulator": "^14.0.8",
 		"expo-linking": "~7.1.5",
 		"expo-media-library": "~17.1.7",
 		"expo-router": "~5.1.7",
@@ -52,6 +59,10 @@
 		"expo-system-ui": "~5.0.7",
 		"expo-updates": "~0.28.15",
 		"expo-web-browser": "~14.2.0",
+		"metro": "^0.82.0",
+		"metro-config": "^0.82.0",
+		"metro-resolver": "^0.82.0",
+		"npm": "11.7.0",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-hook-form": "^7.54.0",
@@ -61,10 +72,7 @@
 		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.11.1",
 		"react-native-vector-icons": "^10.3.0",
-		"react-native-web": "^0.20.0",
-		"metro": "^0.82.0",
-		"metro-resolver": "^0.82.0",
-		"metro-config": "^0.82.0"
+		"react-native-web": "^0.20.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
@@ -91,11 +99,15 @@
 	"expo": {
 		"doctor": {
 			"reactNativeDirectoryCheck": {
-				"exclude": ["metro", "metro-resolver", "metro-config"]
+				"exclude": [
+					"metro",
+					"metro-resolver",
+					"metro-config"
+				]
 			}
 		},
-		 "ios": {
-      "simulatorDevice": "iPhone 15"
-    }
+		"ios": {
+			"simulatorDevice": "iPhone 15"
+		}
 	}
 }
