--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"react-native-reanimated": "~3.17.4",
 		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.11.1",
+		"react-native-size-matters": "^0.4.2",
 		"react-native-vector-icons": "^10.3.0",
 		"react-native-web": "^0.20.0"
 	},
@@ -80,6 +81,7 @@
 		"@react-native-community/cli": "^19.1.0",
 		"@tsconfig/react-native": "^3.0.7",
 		"@types/react-native": "^0.73.0",
+		"depcheck": "^1.4.7",
 		"expo-module-scripts": "^4.1.10",
 		"jest": "^29.2.1",
 		"jest-expo": "~53.0.5",
