--- a/app.json
+++ b/app.json
@@ -18,7 +18,8 @@
       "bundleIdentifier": "com.clisamax.FormCam",
       "runtimeVersion": "1.0.0",
       "infoPlist": {
-        "NSCameraUsageDescription": "Este aplicativo precisa acessar a câmera para tirar fotos.",
+          "NSCameraUsageDescription": "Este aplicativo precisa acessar a câmera para tirar fotos.",
+          "NSPhotoLibraryAddUsageDescription": "Este aplicativo precisa salvar fotos na galeria.",
         "NSAppTransportSecurity": {
           "NSAllowsArbitraryLoads": true,
           "NSExceptionDomains": {
@@ -61,7 +62,8 @@
         "android.permission.CAMERA",
         "android.permission.INTERNET",
         "android.permission.ACCESS_NETWORK_STATE",
-        "android.permission.RECORD_AUDIO"
+          "android.permission.RECORD_AUDIO",
+          "android.permission.WRITE_EXTERNAL_STORAGE"
       ],
       "package": "com.clisamax.FormCam"
     },
