--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 		"expo-font": "~13.3.1",
 		"expo-image-manipulator": "^14.0.8",
 		"expo-linking": "~7.1.5",
-		"expo-media-library": "~17.1.7",
+		"expo-media-library": "^18.2.1",
 		"expo-router": "~5.1.7",
 		"expo-splash-screen": "~0.30.8",
 		"expo-status-bar": "~2.2.3",
