--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
 	"git.ignoreLimitWarning": true,
-	"java.compile.nullAnalysis.mode": "automatic"
+	"java.compile.nullAnalysis.mode": "automatic",
+	"cSpell.words": [
+		"immich",
+		"Immich",
+		"Iuser"
+	]
 }
