--- a/app.json
+++ b/app.json
@@ -35,6 +35,12 @@
             "192.168.1.101": {
               "NSExceptionAllowsInsecureHTTPLoads": true
             },
+            "192.168.0.6": {
+              "NSExceptionAllowsInsecureHTTPLoads": true
+            },
+            "192.168.0.6:2283": {
+              "NSExceptionAllowsInsecureHTTPLoads": true
+            },
             "192.168.0.100": {
               "NSExceptionAllowsInsecureHTTPLoads": true
             },
