chore: update dependencies and improve camera screen implementation
- Downgrade expo-camera to version ~16.1.11 for compatibility
- Refactor cameraScreen.tsx with improved component organization and imports
- Update button components to use buttonVariant across forms
- Reorder and optimize import statements in various files
- Minor styling adjustments and code cleanup

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 		"buffer": "^6.0.3",
 		"dotenv": "^16.5.0",
 		"expo": "~53.0.24",
-		"expo-camera": "^17.0.10",
+		"expo-camera": "~16.1.11",
 		"expo-constants": "^18.0.13",
 		"expo-dev-client": "~5.2.4",
 		"expo-file-system": "^19.0.21",
