--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,5 @@
 {
-	"git.ignoreLimitWarning": true,
-	"java.compile.nullAnalysis.mode": "automatic",
-	"cSpell.words": [
-		"immich",
-		"Immich",
-		"Iuser"
-	]
+  "git.ignoreLimitWarning": true,
+  "java.compile.nullAnalysis.mode": "automatic",
+  "cSpell.words": ["formcam", "immich", "Immich", "Iuser"]
 }
