--- a/app.json
+++ b/app.json
@@ -1,104 +1,105 @@
 {
-  "expo": {
-    "name": "FormCam",
-    "slug": "FormCam",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "formcam",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.clisamax.FormCam",
-      "runtimeVersion": "1.0.0",
-      "infoPlist": {
-          "NSCameraUsageDescription": "Este aplicativo precisa acessar a câmera para tirar fotos.",
-          "NSPhotoLibraryAddUsageDescription": "Este aplicativo precisa salvar fotos na galeria.",
-        "NSAppTransportSecurity": {
-          "NSAllowsArbitraryLoads": true,
-          "NSExceptionDomains": {
-            "localhost": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "192.168.0.16": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "192.168.1.100": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "192.168.1.101": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "192.168.0.6": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "192.168.0.6:2283": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "192.168.0.100": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "192.168.0.101": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "10.0.0.100": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            },
-            "10.0.0.101": {
-              "NSExceptionAllowsInsecureHTTPLoads": true
-            }
-          }
-        }
-      }
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true,
-      "runtimeVersion": "1.0.0",
-      "permissions": [
-        "android.permission.CAMERA",
-        "android.permission.INTERNET",
-        "android.permission.ACCESS_NETWORK_STATE",
-          "android.permission.RECORD_AUDIO",
-          "android.permission.WRITE_EXTERNAL_STORAGE"
-      ],
-      "package": "com.clisamax.FormCam"
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-camera",
-        {
-          "cameraPermission": "Este aplicativo precisa acessar a câmera para tirar fotos."
-        }
-      ],
-      "expo-web-browser"
-    ],
-    "experiments": {
-      "typedRoutes": true
-    },
-    "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "e25bbd2d-b867-49fd-b4b4-101bb9f50ab2"
-      }
-    },
-    "updates": {
-      "url": "https://u.expo.dev/e25bbd2d-b867-49fd-b4b4-101bb9f50ab2"
-    }
-  }
+	"expo": {
+		"name": "FormCam",
+		"slug": "FormCam",
+		"version": "1.0.0",
+		"orientation": "portrait",
+		"icon": "./assets/images/icon.png",
+		"scheme": "formcam",
+		"userInterfaceStyle": "automatic",
+		"newArchEnabled": true,
+		"splash": {
+			"image": "./assets/images/splash-icon.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#ffffff"
+		},
+		"ios": {
+			"supportsTablet": true,
+			"bundleIdentifier": "com.clisamax.FormCam",
+			"runtimeVersion": "1.0.0",
+			"infoPlist": {
+				"NSCameraUsageDescription": "Este aplicativo precisa acessar a câmera para tirar fotos.",
+				"NSPhotoLibraryAddUsageDescription": "Este aplicativo precisa salvar fotos na galeria.",
+				"NSAppTransportSecurity": {
+					"NSAllowsArbitraryLoads": true,
+					"NSExceptionDomains": {
+						"localhost": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.0.16": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.1.100": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.1.101": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.0.6": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.0.6:2283": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.0.100": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"192.168.0.101": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"10.0.0.100": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						},
+						"10.0.0.101": {
+							"NSExceptionAllowsInsecureHTTPLoads": true
+						}
+					}
+				}
+			}
+		},
+		"android": {
+			"adaptiveIcon": {
+				"foregroundImage": "./assets/images/adaptive-icon.png",
+				"backgroundColor": "#ffffff"
+			},
+			"edgeToEdgeEnabled": true,
+			"runtimeVersion": "1.0.0",
+			"permissions": [
+				"android.permission.CAMERA",
+				"android.permission.INTERNET",
+				"android.permission.ACCESS_NETWORK_STATE",
+				"android.permission.RECORD_AUDIO",
+				"android.permission.WRITE_EXTERNAL_STORAGE"
+			],
+			"package": "com.clisamax.FormCam"
+		},
+		"web": {
+			"bundler": "metro",
+			"output": "static",
+			"favicon": "./assets/images/favicon.png"
+		},
+		"plugins": [
+			"expo-router",
+			[
+				"expo-camera",
+				{
+					"cameraPermission": "Este aplicativo precisa acessar a câmera para tirar fotos."
+				}
+			],
+			"expo-web-browser",
+			"expo-file-system"
+		],
+		"experiments": {
+			"typedRoutes": true
+		},
+		"extra": {
+			"router": {},
+			"eas": {
+				"projectId": "e25bbd2d-b867-49fd-b4b4-101bb9f50ab2"
+			}
+		},
+		"updates": {
+			"url": "https://u.expo.dev/e25bbd2d-b867-49fd-b4b4-101bb9f50ab2"
+		}
+	}
 }
