--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"expo-camera": "~16.1.11",
 		"expo-constants": "^18.0.13",
 		"expo-dev-client": "~5.2.4",
-		"expo-file-system": "^19.0.21",
+		"expo-file-system": "~18.1.11",
 		"expo-font": "~13.3.1",
 		"expo-image-manipulator": "^14.0.8",
 		"expo-linking": "~7.1.5",
